--- a/scatterPlot.html
+++ b/scatterPlot.html
@@ -25,7 +25,7 @@
 	<div id ="d3Wrapper"></div>
 <script src = "http://d3js.org/d3.v3.min.js"></script>
 <script type="text/javascript">
-    var margin = 10,
+    var margin = 20,
         width = 700,
         height = 600;
     var doping=[];
@@ -41,6 +41,14 @@
                  .attr('height',height+padding+margin+100)
                  .append('g')
                  .attr('transform','translate(' + margin + ',' + margin + ')');
+    svg.append("text")
+        .attr("x", (width / 2))             
+        .attr("y", 50)
+        .attr("text-anchor", "middle")  
+        .style("font-size", "25px") 
+        .style("text-decoration", "underline") 
+        .text("Rank vs Seconds Graph");
+
 
 
     d3.json(url, function(error,data){
@@ -50,7 +58,9 @@
             rank.push(data[i].Place);
             //doping.push(data[i].Doping);
 
-        }
+        };
+
+
 
     var xScale = d3.scale.linear().range([width,0]);
     var yScale = d3.scale.linear().range([0,height]);
@@ -107,11 +117,13 @@
                 })
                 .style('position','absolute')
                 .style('display','none');
+                    
 
             dots.on("mouseenter",function(d,i){
                 dot = d3.select(this);
                 dot.select('text')
-                    .style('display','inline-block');
+                    .style('display','block')
+                    .style("text-align","left");
                 
             });
 
@@ -126,13 +138,28 @@
             .attr("class", "x axis")
             .attr("transform", "translate(0," + 
                 (height-padding)+ ")")
+
             .call(xAxis);
+    svg.append("text")             
+      .attr("transform",
+            "translate(" + (width/2) + " ," + 
+                           (height + 20 + 20) + ")")
+      .attr("dy", "1em")
+      .style("text-anchor", "middle")
+      .text("Seconds");
 
           //the y axis
         svg.append("g")
             .attr("class", "y axis")
             .attr("transform", "translate(" + 0 + ",-10)")
             .call(yAxis);
+    svg.append("text")
+      .attr("transform", "rotate(-90)")
+      .attr("y", 0 - 20)
+      .attr("x",0 - (height / 2))
+      .attr("dy", "1em")
+      .style("text-anchor", "middle")
+      .text("Rank");
 
 
 
